--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -9,7 +9,7 @@
       <% end %>
       </ul>
     </div>
-  <% end %>
+<% end %>
 
   <div class="field">
     <%= f.label :name %>
@@ -18,12 +18,12 @@
 
   <div class="field">
     <%= f.label :style %>
-    <%= f.text_field :style %>
+    <%= f.select :style, options_for_select(@styles) %>
   </div>
 
   <div class="field">
     <%= f.label :brewery_id %>
-    <%= f.number_field :brewery_id %>
+    <%= f.select :brewery_id, options_from_collection_for_select(@breweries, :id, :name) %>
   </div>
 
   <div class="actions">
