--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,20 @@
     <%= link_to 'Breweries', breweries_path %>
     <%= link_to 'Beers', beers_path %>
     <%= link_to 'Ratings', ratings_path %>
+    <%= link_to 'Users', users_path %>
+    <%= link_to 'Beer clubs', beer_clubs_path %>|
+    <% if not current_user %>
+        <%= link_to 'Signin', new_session_path %>
+        <%= link_to 'Signup', new_user_path %>
+    <% end %>
+    <% if current_user %>
+        <%= link_to current_user.username, current_user %>
+        <%= link_to 'Rate a beer', new_rating_path %>
+        <%= link_to 'Join a club', new_membership_path %>
+        <%= link_to 'Signout',  session_path(session.id), method: :delete%>
+    <% end %>
   </div>
     <%= yield %>
+
   </body>
 </html>
