--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -28,5 +28,26 @@
     </ul>
 <% end %>
 
-<%= link_to 'Edit', edit_beer_club_path(@beer_club) %> |
+<% if current_user and not current_user.in? @beer_club.members %>
+    <h4>join this beer club:</h4>
+
+    <%= form_for(@membership) do |f| %>
+        <%= f.hidden_field :beer_club_id %>
+        <%= f.submit value: "join the club" %>
+    <% end %>
+<% end %>
+
+<% if current_user and current_user.in? @beer_club.members %>
+    <%= form_for(@membership_ending, method: "delete") do |f| %>
+        <%= f.hidden_field :beer_club_id %>
+        <%= f.submit value: "end the membership" %>
+    <% end %>
+<% end %>
+
+<br>
+
+<% if current_user %>
+    <%= link_to 'Edit', edit_beer_club_path(@beer_club) %> |
+    <%= link_to 'Destroy', @beer, method: :delete, data: {confirm: 'Are you sure?'} %> |
+<% end %>
 <%= link_to 'Back', beer_clubs_path %>
