--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,11 @@
 <div class="navibar">
   <%= link_to 'Breweries', breweries_path %>
   <%= link_to 'Beers', beers_path %>
+  <%= link_to 'Styles', styles_path %>
   <%= link_to 'Ratings', ratings_path %>
   <%= link_to 'Users', users_path %>
-  <%= link_to 'Beer clubs', beer_clubs_path %>|
+  <%= link_to 'Clubs', beer_clubs_path %>
+  <%= link_to 'Places', places_path %>|
   <% if not current_user %>
       <%= link_to 'Signin', new_session_path %>
       <%= link_to 'Signup', new_user_path %>
