--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -6,15 +6,21 @@
     city <%= text_field_tag :city, params[:city] %>
     <%= submit_tag "Search" %>
 <% end %>
-
+<br>
 <% if @weather %>
+    <strong>The current beer weather in searched city</strong><br><br>
     <img src="<%= @weather.icon %>"><br>
-    <%= @weather.temp_c %> Celcius <br>
-    <strong>wind:</strong> <%= @weather.wind %> m/s, direction <%= @weather.wind_dir%>
+    <%= @weather.temp %> Celcius <br><br>
+    <strong>wind:</strong> <%= '%.02f' %  @weather.wind %> m/s, direction <%= @weather.wind_dir %>
+    <br><br>
 <% end %>
 
-<% if @places %>
+<% if @places and @places.empty? %>
+    No locations in searched city
+<% end %>
 
+<% if @places and not @places.empty? %>
+<strong>Places to get your beer</strong>
     <table>
       <thead>
       <% Place.rendered_fields.each do |f| %>
