--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h2><%= @beer_club.name %></h2>
 
 
@@ -40,14 +38,10 @@
 <% if current_user and current_user.in? @beer_club.members %>
     <%= form_for(@membership_ending, method: "delete") do |f| %>
         <%= f.hidden_field :beer_club_id %>
-        <%= f.submit value: "end the membership" %>
+        <%= f.submit class:"btn btn-danger", value:"end the membership"  %>
     <% end %>
 <% end %>
 
 <br>
 
-<% if current_user %>
-    <%= link_to 'Edit', edit_beer_club_path(@beer_club) %> |
-    <%= link_to 'Destroy', @beer, method: :delete, data: {confirm: 'Are you sure?'} %> |
-<% end %>
-<%= link_to 'Back', beer_clubs_path %>
+<%= edit_and_destroy_buttons(@beer_club) %>
