--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,34 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Ratebeer</title>
-  <%= csrf_meta_tags %>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= content_for?(:title) ? yield(:title) : "Ratebeer" %></title>
+    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Ratebeer" %>">
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => 'reload' %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+    <header>
+      <%= render 'layouts/navigation' %>
+    </header>
 
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-</head>
+    <main role="main" class=".container">
+      <%= render 'layouts/messages' %>
 
-<body>
-<div class="navibar">
-  <%= link_to 'Breweries', breweries_path %>
-  <%= link_to 'Beers', beers_path %>
-  <%= link_to 'Styles', styles_path %>
-  <%= link_to 'Ratings', ratings_path %>
-  <%= link_to 'Users', users_path %>
-  <%= link_to 'Clubs', beer_clubs_path %>
-  <%= link_to 'Places', places_path %>|
-  <% if not current_user %>
-      <%= link_to 'Signin', new_session_path %>
-      <%= link_to 'Signup', new_user_path %>
-  <% end %>
-  <% if current_user %>
-      <%= link_to current_user.username, current_user %>
-      <%= link_to 'Rate a beer', new_rating_path %>
-      <%= link_to 'Join a club', new_membership_path %>
-      <%= link_to 'Signout', session_path(session.id), method: :delete %>
-  <% end %>
-</div>
-<%= yield %>
-
-</body>
+      <div class="row">
+        <div class="col-md-8">
+          <%= yield %>
+        </div>
+        <div class="col-md-4">
+          <img src="http://www.cs.helsinki.fi/u/mluukkai/wadror/pint.jpg" width="200">
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
