--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,10 +1,8 @@
 <h1>Beer places search</h1>
 
-<p id="notice"><%= notice %></p>
-
 <%= form_tag places_path do %>
     city <%= text_field_tag :city, params[:city] %>
-    <%= submit_tag "Search" %>
+    <%= submit_tag "Search", class:'btn btn-primary' %>
 <% end %>
 <br>
 <% if @weather %>
@@ -21,7 +19,7 @@
 
 <% if @places and not @places.empty? %>
 <strong>Places to get your beer</strong>
-    <table>
+    <table class = "table table-hover">
       <thead>
       <% Place.rendered_fields.each do |f| %>
           <td><%= f %></td>
