--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,9 +1,59 @@
-<h2>List of ratings</h2>
+<h2>Rating statistics</h2>
 
 <p> Number of ratings: <%= @ratings.count %> </p>
 
+  <div class="row">
+    <div class="col-xs-8 col-sm-4">
+
+      <h3>Best breweries</h3>
+      <%= render 'list', ratings: @top_breweries %>
+
+    </div>
+    <div class="col-xs-8 col-sm-4">
+
+      <h3>Best beers</h3>
+      <%= render 'list', ratings: @top_beers %>
+
+    </div>
+    <div class="col-xs-8 col-sm-4">
+
+      <h3>Best styles</h3>
+      <%= render 'list', ratings: @top_styles %>
+
+    </div>
+  </div>
+
+<h3>Most active users</h3>
+
+<table class="table table-hover">
+  <thead>
+  <tr>
+    <th></th>
+    <th>favorite beer</th>
+    <th>preferred style</th>
+    <th>favorite brewery</th>
+    <th>ratings</th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <% @top_raters.each do |user| %>
+      <tr>
+        <td><%= link_to user.username, user %></td>
+        <td><%= user.favorite_beer %></td>
+        <td><%= user.favorite_style %></td>
+        <td><%= user.favorite_brewery %></td>
+        <td><%= user.ratings.count %></td>
+        <td></td>
+      </tr>
+  <% end %>
+  </tbody>
+</table>
+
+<h3>Recent ratings</h3>
+
 <ul>
-  <% @ratings.each do |rating| %>
+  <% @ratings.recent.each do |rating| %>
       <li> <%= rating %> <%= link_to rating.user, rating.user %> </li>
   <% end %>
 </ul>
