--- a/app/views/styles/show.html.erb
+++ b/app/views/styles/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h2><%= @style.name %></h2>
 
 <p>
@@ -12,6 +10,7 @@
 <% @style.beers.each do |beer| %>
     <li> <%= link_to beer.name, beer %> by <%= link_to beer.brewery.name, beer.brewery %></li>
 <% end %>
+
 <br>
-<%= link_to 'Edit', edit_style_path(@style) %> |
-<%= link_to 'Back', styles_path %>
+
+<%= edit_and_destroy_buttons(@style) %>
