--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -7,4 +7,4 @@
     </p>
 <% end %>
 
-<%= link_to 'New Style', new_style_path, class:'btn btn-primary' %>
+<%= link_to 'New Style', new_style_path, class:'btn btn-primary' if current_user%>
