--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,8 +11,10 @@
   <tbody>
   <% @users.each do |user| %>
       <tr>
-        <td><%= user.username %></td>
-        <td><%= link_to 'Show', user %></td>
+        <td><%= link_to user.username, user %></td>
+        <td><% if user.suspended?  %>
+              <span class="label label-info">account frozen</span>
+          <% end %></td>
       </tr>
   <% end %>
   </tbody>
