--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -31,7 +31,7 @@
 
     <%= form_for(@membership) do |f| %>
         <%= f.hidden_field :beer_club_id %>
-        <%= f.submit value: "join the club" %>
+        <%= f.submit value: "join the club" , class:"btn btn-primary"%>
     <% end %>
 <% end %>
 
