--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Beers</h1>
 
+<% cache "beerlist-#{@order}", skip_digest: true do %>
+
 <table class = "table table-hover">
   <thead>
   <tr>
@@ -20,6 +22,8 @@
   <% end %>
   </tbody>
 </table>
+
+<% end %>
 
 <br>
 
