--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -28,15 +28,6 @@
     No confirmed members.
 <% end %>
 
-<% if current_user and not current_user.in? @beer_club.members %>
-    <h4>join this beer club:</h4>
-
-    <%= form_for(@membership) do |f| %>
-        <%= f.hidden_field :beer_club_id %>
-        <%= f.submit value: "join the club", class: "btn btn-primary" %>
-    <% end %>
-<% end %>
-
 <h3>Outstanding applications</h3>
 <% if not @beer_club.memberships.unconfirmed.empty? %>
     <ul>
@@ -54,8 +45,16 @@
     No applications waiting.
 <% end %>
 
+<% if current_user and not current_user.in? @beer_club.members %>
+    <h4>join this beer club:</h4>
 
-<% if current_user and current_user.in? @beer_club.memberships.confirmed %>
+    <%= form_for(@membership) do |f| %>
+        <%= f.hidden_field :beer_club_id %>
+        <%= f.submit value: "join the club", class: "btn btn-primary" %>
+    <% end %>
+<% end %>
+
+<% if current_user and current_user.is_confirmed_member? @beer_club %>
     <%= form_for(@membership_ending, method: "delete") do |f| %>
         <%= f.hidden_field :beer_club_id %>
         <%= f.submit class: "btn btn-danger", value: "end the membership" %>
