--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -1,22 +1,26 @@
-<h2><%= @beer.name %></h2>
+<% cache @beer do %>
 
-<p>
-  <strong>Style:</strong>
-  <%= @beer.style %>
-</p>
+    <h2><%= @beer.name %></h2>
 
-<p>
-  <strong>Brewery:</strong>
-  <%= @beer.brewery.name %>
-</p>
+    <p>
+      <strong>Style:</strong>
+      <%= @beer.style %>
+    </p>
 
-<p>
-  <% if @beer.ratings.empty? %>
-      Beer has not yet been rated!
-  <% else %>
-      Beer has <%= pluralize(@beer.ratings.count, 'rating') %>, average <%= round(@beer.average_rating) %>
-  <% end %>
-</p>
+    <p>
+      <strong>Brewery:</strong>
+      <%= @beer.brewery.name %>
+    </p>
+
+    <p>
+      <% if @beer.ratings.empty? %>
+          Beer has not yet been rated!
+      <% else %>
+          Beer has <%= pluralize(@beer.ratings.count, 'rating') %>, average <%= round(@beer.average_rating) %>
+      <% end %>
+    </p>
+
+<% end %>
 
 <% if current_user %>
     <h4>give a rating:</h4>
@@ -24,7 +28,7 @@
     <%= form_for(@rating) do |f| %>
         <%= f.hidden_field :beer_id %>
         score: <%= f.number_field :score %>
-        <%= f.submit class:"btn btn-primary"%>
+        <%= f.submit class: "btn btn-primary" %>
     <% end %>
     <br>
 <% end %>
