--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,28 +1,33 @@
-<h2><%= @brewery.name %>
-  <% if not @brewery.active  %>
-      <span class="label label-info">retired</span>
-  <% end %>
-</h2>
+<% cache @brewery do %>
 
-<p>
-  <i><strong>Established at </strong></i>
-  <%= @brewery.year %>
-</p>
+    <h2><%= @brewery.name %>
+      <% if not @brewery.active %>
+          <span class="label label-info">retired</span>
+      <% end %>
+    </h2>
 
-<p>Number of beers <%= @brewery.beers.count%> </p>
+    <p>
+      <i><strong>Established at </strong></i>
+      <%= @brewery.year %>
+    </p>
 
-<ul>
-  <% @brewery.beers.each do |beer| %>
-      <li><%= link_to beer.name, beer %></li>
-  <% end %>
-</ul>
+    <p>Number of beers <%= @brewery.beers.count %> </p>
 
-<p>
-  <% if @brewery.ratings.empty? %>
-      Brewery has not yet been rated!
-  <% else %>
-      Brewery has <%= pluralize(@brewery.ratings.count, 'rating') %>, average <%= @brewery.average_rating %>
-  <% end %>
-</p>
+    <ul>
+      <% @brewery.beers.each do |beer| %>
+          <li><%= link_to beer.name, beer %></li>
+      <% end %>
+    </ul>
+
+    <p>
+      <% if @brewery.ratings.empty? %>
+          Brewery has not yet been rated!
+      <% else %>
+          Brewery has <%= pluralize(@brewery.ratings.count, 'rating') %>, average <%= round(@brewery.average_rating) %>
+      <% end %>
+    </p>
+
+<% end %>
+
 <%= link_to "change activity", toggle_activity_brewery_path(@brewery.id), method: :post, class: "btn btn-primary" %>
 <%= edit_and_destroy_buttons(@brewery) %>
