--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,59 +1,63 @@
 <h2>Rating statistics</h2>
 
-<p> Number of ratings: <%= @ratings.count %> </p>
+<% cache 'rating_statistics', expires_in:10.minutes do %>
 
-  <div class="row">
-    <div class="col-xs-8 col-sm-4">
+    <p> Number of ratings: <%= @ratings.count %> </p>
 
-      <h3>Best breweries</h3>
-      <%= render 'list', ratings: @top_breweries %>
+    <div class="row">
+      <div class="col-xs-8 col-sm-4">
 
+        <h3>Best breweries</h3>
+        <%= render 'list', ratings: @top_breweries %>
+
+      </div>
+      <div class="col-xs-8 col-sm-4">
+
+        <h3>Best beers</h3>
+        <%= render 'list', ratings: @top_beers %>
+
+      </div>
+      <div class="col-xs-8 col-sm-4">
+
+        <h3>Best styles</h3>
+        <%= render 'list', ratings: @top_styles %>
+
+      </div>
     </div>
-    <div class="col-xs-8 col-sm-4">
 
-      <h3>Best beers</h3>
-      <%= render 'list', ratings: @top_beers %>
+    <h3>Most active users</h3>
 
-    </div>
-    <div class="col-xs-8 col-sm-4">
-
-      <h3>Best styles</h3>
-      <%= render 'list', ratings: @top_styles %>
-
-    </div>
-  </div>
-
-<h3>Most active users</h3>
-
-<table class="table table-hover">
-  <thead>
-  <tr>
-    <th></th>
-    <th>favorite beer</th>
-    <th>preferred style</th>
-    <th>favorite brewery</th>
-    <th>ratings</th>
-  </tr>
-  </thead>
-
-  <tbody>
-  <% @top_raters.each do |user| %>
+    <table class="table table-hover">
+      <thead>
       <tr>
-        <td><%= link_to user.username, user %></td>
-        <td><%= user.favorite_beer %></td>
-        <td><%= user.favorite_style %></td>
-        <td><%= user.favorite_brewery %></td>
-        <td><%= user.ratings.count %></td>
-        <td></td>
+        <th></th>
+        <th>favorite beer</th>
+        <th>preferred style</th>
+        <th>favorite brewery</th>
+        <th>ratings</th>
       </tr>
-  <% end %>
-  </tbody>
-</table>
+      </thead>
 
-<h3>Recent ratings</h3>
+      <tbody>
+      <% @top_raters.each do |user| %>
+          <tr>
+            <td><%= link_to user.username, user %></td>
+            <td><%= user.favorite_beer %></td>
+            <td><%= user.favorite_style %></td>
+            <td><%= user.favorite_brewery %></td>
+            <td><%= user.ratings.count %></td>
+            <td></td>
+          </tr>
+      <% end %>
+      </tbody>
+    </table>
 
-<ul>
-  <% @ratings.recent.each do |rating| %>
-      <li> <%= rating %> <%= link_to rating.user, rating.user %> </li>
-  <% end %>
-</ul>
+    <h3>Recent ratings</h3>
+
+    <ul>
+      <% @ratings.recent.each do |rating| %>
+          <li> <%= rating %> <%= link_to rating.user, rating.user %> </li>
+      <% end %>
+    </ul>
+
+<% end %>
