--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,24 +1,26 @@
 <h1>Users</h1>
 
-<table class = "table table-hover">
+<table class="table table-hover">
   <thead>
   <tr>
     <th>Username</th>
-    <th colspan="3"></th>
+    <th> rated beers </th>
+    <th> total ratings </th>
+    <th></th>
   </tr>
   </thead>
-
   <tbody>
   <% @users.each do |user| %>
       <tr>
         <td><%= link_to user.username, user %></td>
-        <td><% if user.suspended?  %>
+        <td><%= user.beers.group_by{|b| b.name}.size %></td>
+        <td><%= user.ratings.size %></td>
+        <td>
+          <% if user.suspended? %>
               <span class="label label-info">account frozen</span>
-          <% end %></td>
+          <% end %>
+        </td>
       </tr>
   <% end %>
   </tbody>
 </table>
-<br>
-
-<%= link_to 'New User', new_user_path, class:'btn btn-primary' %>
