--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -56,15 +56,10 @@
     <h4>applied membership of</h4>
     <ul>
       <% @user.memberships.unconfirmed.each do |m| %>
-          <li>
-
-            <%= link_to m.beer_club, m.beer_club %>
-          </li>
+          <li><%= link_to m.beer_club, m.beer_club %></li>
       <% end %>
     </ul>
 <% end %>
-
-<br><br>
 
 <% if current_user and current_user.admin? %>
     <% if @user.suspended %>
@@ -72,9 +67,8 @@
     <% else %>
         <%= link_to "suspend account", toggle_suspension_user_path(@user.id), method: :post, class: "btn btn-primary" %>
     <% end %>
+    <br><br>
 <% end %>
-
-<br><br>
 
 <% if @user == current_user %>
     <%= link_to 'Edit', edit_user_path(@user), class: "btn btn-primary" %> |
